--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,26 @@ project(ClothSDK VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-option(BUILD_MAYA_PLUGIN "Build the Maya plugin" OFF)
+include(FetchContent)
 
-find_package(Eigen3 3.3 REQUIRED)
+FetchContent_Declare(
+  googletest
+  GIT_REPOSITORY https://github.com/google/googletest.git
+  GIT_TAG        v1.15.2  
+)
+
+FetchContent_Declare(
+  eigen
+  GIT_REPOSITORY https://gitlab.com/libeigen/eigen.git
+  GIT_TAG        3.4.0 
+)
+
+set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+FetchContent_MakeAvailable(googletest eigen)
+
+option(BUILD_MAYA_PLUGIN "Build the Maya plugin" OFF)
 
 if(BUILD_MAYA_PLUGIN)
     if(NOT DEFINED ENV{MAYA_DEVKIT_BASE})
@@ -23,20 +40,14 @@ if(BUILD_MAYA_PLUGIN)
     endif()
 endif()
 
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  GIT_REPOSITORY https://github.com/google/googletest.git
-  GIT_TAG        v1.15.2  
-)
-
-set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-
-FetchContent_MakeAvailable(googletest)
-
 add_subdirectory(core)
+
+add_executable(particle_print_test tests/manual_test.cpp)
+
+target_link_libraries(particle_print_test PRIVATE ClothCore)
 
 if(BUILD_MAYA_PLUGIN)
     add_subdirectory(maya)
 endif()
+
+enable_testing()
