--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -4,6 +4,8 @@ set(CORE_SOURCES
     src/physics/Constraint.cpp
     src/physics/DistanceConstraint.cpp
     src/physics/BendingConstraint.cpp
+    src/physics/Collider.cpp
+    src/physics/PlaneCollider.cpp
     src/engine/ClothMesh.cpp
 )
 
