--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CORE_SOURCES
     src/physics/BendingConstraint.cpp
     src/physics/Collider.cpp
     src/physics/PlaneCollider.cpp
+    src/physics/SphereCollider.cpp
     src/engine/ClothMesh.cpp
 )
 
