feat: integrate spatial hash on the solver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,15 +42,13 @@ endif()
 
 add_subdirectory(core)
 
-add_executable(unit_tests tests/physics_tests.cpp)
-target_link_libraries(unit_tests PRIVATE ClothCore GTest::gtest_main)
-add_test(NAME ALLPhysicsTests COMMAND unit_tests)
+add_executable(main main.cpp)
+target_link_libraries(main PRIVATE ClothCore GTest::gtest_main)
 
-add_executable(test_wind tests/test_wind.cpp)
-target_link_libraries(test_wind PRIVATE ClothCore Eigen3::Eigen)
 
 if(BUILD_MAYA_PLUGIN)
     add_subdirectory(maya)
 endif()
 
 enable_testing()
+add_subdirectory(tests)
