--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -9,11 +9,16 @@ set(CORE_SOURCES
     src/physics/SphereCollider.cpp
     src/physics/SpatialHash.cpp
     src/engine/ClothMesh.cpp
+    src/io/OBJLoader.cpp
+    src/io/ConfigLoader.cpp
 )
 
 add_library(ClothCore SHARED ${CORE_SOURCES})
 
 target_link_libraries(ClothCore PUBLIC Eigen3::Eigen)
+target_link_libraries(ClothCore PUBLIC tinyobjloader)
+target_link_libraries(ClothCore PUBLIC nlohmann_json::nlohmann_json)
+
 
 target_include_directories(ClothCore PUBLIC 
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
