feat : implements pybind11

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,13 +35,21 @@ FetchContent_Declare(
   GIT_TAG        v3.11.3
 )
 
+FetchContent_Declare(
+  pybind11
+  GIT_REPOSITORY https://github.com/pybind/pybind11.git
+  GIT_TAG        v2.13.6
+)
+
 set(TINYOBJLOADER_INSTALL OFF CACHE BOOL "" FORCE)
 set(EIGEN_BUILD_PKGCONFIG OFF CACHE BOOL "" FORCE)
 set(JSON_BuildTests OFF CACHE BOOL "" FORCE)
 set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+set(PYBIND11_INSTALL OFF CACHE BOOL "" FORCE)
+set(PYBIND11_TEST OFF CACHE BOOL "" FORCE)
 
-FetchContent_MakeAvailable(googletest eigen tinyobjloader json)
+FetchContent_MakeAvailable(googletest eigen tinyobjloader json pybind11)
 
 option(BUILD_MAYA_PLUGIN "Build the Maya plugin" OFF)
 
@@ -60,6 +68,8 @@ add_subdirectory(core)
 add_executable(main main.cpp)
 target_link_libraries(main PRIVATE ClothCore GTest::gtest_main)
 
+pybind11_add_module(cloth_sdk python/src/bindings.cpp)
+target_link_libraries(cloth_sdk PRIVATE ClothCore)
 
 if(BUILD_MAYA_PLUGIN)
     add_subdirectory(maya)
