--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,24 @@ FetchContent_Declare(
   GIT_TAG        v2.13.6
 )
 
+FetchContent_Declare(
+  glfw
+  GIT_REPOSITORY https://github.com/glfw/glfw.git
+  GIT_TAG        3.3.8
+)
+
+FetchContent_Declare(
+  glad
+  GIT_REPOSITORY https://github.com/Dav1dde/glad.git
+  GIT_TAG        v0.1.36
+)
+
+FetchContent_Declare(
+  imgui
+  GIT_REPOSITORY https://github.com/ocornut/imgui.git
+  GIT_TAG        v1.91.5-docking 
+)
+
 set(TINYOBJLOADER_INSTALL OFF CACHE BOOL "" FORCE)
 set(EIGEN_BUILD_PKGCONFIG OFF CACHE BOOL "" FORCE)
 set(JSON_BuildTests OFF CACHE BOOL "" FORCE)
@@ -48,8 +66,12 @@ set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 set(PYBIND11_INSTALL OFF CACHE BOOL "" FORCE)
 set(PYBIND11_TEST OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
 
-FetchContent_MakeAvailable(googletest eigen tinyobjloader json pybind11)
+FetchContent_MakeAvailable(googletest eigen tinyobjloader json pybind11 glfw glad imgui)
 
 option(BUILD_MAYA_PLUGIN "Build the Maya plugin" OFF)
 
@@ -64,6 +86,8 @@ if(BUILD_MAYA_PLUGIN)
 endif()
 
 add_subdirectory(core)
+
+add_subdirectory(viewer)
 
 add_executable(main main.cpp)
 target_link_libraries(main PRIVATE ClothCore GTest::gtest_main)
