--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -15,28 +15,29 @@ set(IMGUI_SOURCES
 )
 
 add_library(imgui_lib STATIC ${IMGUI_SOURCES})
-
-target_include_directories(imgui_lib PUBLIC 
-    ${IMGUI_DIR} 
-    ${IMGUI_BACKENDS_DIR}
-)
+target_include_directories(imgui_lib PUBLIC ${IMGUI_DIR} ${IMGUI_BACKENDS_DIR})
 target_link_libraries(imgui_lib PUBLIC glfw OpenGL::GL)
+set_target_properties(imgui_lib PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
-add_executable(ClothViewer 
-    main.cpp
+add_library(ViewerCore STATIC
     src/Application.cpp
     src/Renderer.cpp
     src/Camera.cpp
 )
 
-target_link_libraries(ClothViewer 
-    PRIVATE 
-        ClothCore        
-        imgui_lib        
-        glfw             
-        glad             
-        OpenGL::GL      
-        Threads::Threads 
+target_link_libraries(ViewerCore 
+    PUBLIC 
+        ClothCore 
+        imgui_lib 
+        glad 
+        glfw 
+        OpenGL::GL 
+        Threads::Threads
 )
 
-target_include_directories(ClothViewer PRIVATE include)
+target_include_directories(ViewerCore PUBLIC include)
+
+set_target_properties(ViewerCore PROPERTIES POSITION_INDEPENDENT_CODE ON)
+
+add_executable(ClothViewer main.cpp)
+target_link_libraries(ClothViewer PRIVATE ViewerCore)
