--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CORE_SOURCES
     src/physics/Constraint.cpp
     src/physics/DistanceConstraint.cpp
     src/physics/BendingConstraint.cpp
+    src/physics/PinConstraint.cpp
     src/physics/Collider.cpp
     src/physics/PlaneCollider.cpp
     src/physics/SphereCollider.cpp
