feat: add capsule collider

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CORE_SOURCES
     src/physics/Collider.cpp
     src/physics/PlaneCollider.cpp
     src/physics/SphereCollider.cpp
+    src/physics/CapsuleCollider.cpp
     src/physics/Force.cpp
     src/physics/GravityForce.cpp
     src/physics/AerodynamicForce.cpp
